# my-project

./: .cruft.json  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  404.html  CHANGELOG.rst  LICENSE  LICENSE.PARITY  LICENSE.PROSPERITY  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yml  setup.cfg  setup.py
.github/workflows/: build-darwin.yaml  build-linux.yaml  build-windows.yaml
about/: index.html
api_reference/my_project/: index.html
api_reference/my_project.defaults/: index.html
api_reference/my_project.interfaces.cli/: index.html
api_reference/my_project.my_project/: index.html
ci/docker/: Dockerfile
ci/docs/: __init__.py
ci/gitlab/: set_env.sh
ci/gitlab/release/: binaries.yml  container.yml
ci/gitlab/test/: commitlint.yml  coverage.yml  flake8.yml  mypy.yml  safety.yml  tox.yml
docs/: about.md  install.md  usage.md
install/: index.html
scripts/attribution/: create_attribution_data.sh
scripts/build-binary/: build.sh  onefile.spec
scripts/install/: my-project.sh
search/: search_index.json
src/my_project/: __init__.py  defaults.py  my_project.py
src/my_project/_frkl/: _frkl.json
src/my_project/interfaces/cli/: __init__.py
src/my_project/resources/: .gitkeep
tests/: conftest.py  test_my_project.py
usage/: index.html
